# projeto_graal

./: CMakeLists.txt  README.md  author.md  autor.md
include/: graal.h
tests/: CMakeLists.txt  main.cpp
tests/include/tm/: test_manager.cpp  test_manager.h
